# openserverless-operator

./: .dockerignore  .env.dist  .env.sample  .envrc  .gitignore  .gitmodules  .licenserc.yaml  DEVEL.md  DISCLAIMER  Dockerfile  NOTICE  OPERATOR.md  README.md  Taskfile.yml  TaskfileBuild.yml  TaskfileDev.yml  TaskfileEnterprise.yml  TaskfileNuvEnterprise.yml  TaskfileTest.yml  cron.sh  dbinit.sh  kaniko-build.yaml  kaniko.yaml  operator-deploy.yaml  opsfile.yml  prereq.yml  pyproject.toml  quota.sh  registries.yaml  run.sh  shell.nix  whisk-spark-test.yaml  whisk-system.sh  wskadmin.sh
.github/: cisetup.sh  kind.yaml
.github/workflows/: check.yml  fast-image.yml  image.yml  trigger-testing.yaml
actions/: Taskfile.yml
actions/content/: __main__.py
actions/github/: _playground.txt
actions/login/: __main__.py
actions/secrets/: __main__.py
archive/: DESIGN.md  Dockerfile  README.md  TaskfileBuild.yml  TaskfileTest.yml  pyproject.toml  quota.sh  whisk-system.sh
archive/actions/: Taskfile.yml  system.yml
archive/nuvolaris/: apihost_util.py  bcrypt_util.py  cronjob.py  etcd.py  ferretdb.py  ingress.py  kafka.py  milvus_standalone.py  minio_util.py  redis.py  redis_client.py  s3_client.py  storage_static.py  user_handlers.py  user_patcher.py  zookeeper.py
archive/tests/: couchdb_test.ipy  cron_test.ipy  kafka_test.ipy  kvrocks_test.ipy  openwhisk_test.py  ping.js  pytorch.py  redis.js  redis_user_test.ipy  whisk-full.yaml  workflows_test.ipy
attic/: README.md
clusters/: opsfile.yml
couchdb-operator/: .dockerignore.bak  Dockerfile  Dockerfile.dbinit  Taskfile.yml  couchdb-auth-secret.yaml  couchdb-crd.yaml  couchdb-instance.yaml  deploy_operator.txt  deployment.yaml  operator_handler.py  rbac-nuvolaris.yaml
nuvolaris/: apihost_util.py  ceph_cos.py  ceph_cos_ingress.py  ceph_cos_obc_data.py  ceph_cos_user_data.py  certmanager.py  couchdb.py  cronjob.py  endpoint.py  enterprise_util.py  etcd.py  ingress_data.py  invoker.py  ip_util.py  issuer.py  kopf_util.py  kube.py  kustomize.py  kvrocks.py  main.py  milvus_admin_client.py  milvus_operator.py  milvus_simple_client.py  milvus_standalone.py  minio_deploy.py  minio_ingress.py  minio_util.py  monitoring.py  nuvolaris_metadata.py  opaque_secret.py  openwhisk.py  openwhisk_enterprise.py  openwhisk_standalone.py  operator_util.py  ops.py  opsfile.yml  patcher.py  postgres_operator.py  quota_checker.py  quota_checker_job.py  (+21 more)
olaris-operator/: docopts.md  opsfile.yml
tests/: couchdb_test.ipy  etcd_test.ipy  hello.py  invoker_test.ipy  kafka_test.ipy  kvrocks_test.ipy  kvrocks_user_test.ipy  main_test.ipy  milvus_admin_test.ipy  pytorch.py  quota_checker_test.ipy  redis_test.ipy  registry_config_test.py  volume_test.ipy  whisk-full.yaml  whisk.yaml  zookeeper_test.ipy
(+306 files in other folders)
