# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#
[tool.poetry]
name = "nuvolaris"
version = "2.0.0"
description = "Apache OpenServerless operator"
authors = ["Michele Sciabarra <michele@sciabarra.com>","Francesco Timperi Tiberi <francesco@nuvolaris.io>"]

[tool.poetry.dependencies]
python = "^3.9"
kopf = {extras = ["full-auth"], version = "^1.36.1"}
PyYAML = "^6.0"
pykube = "^0.15.0"
Jinja2 = "^3.1.5"
requests = "^2.27.1"
flatdict = "^4.0.1"
croniter = "^1.3.5"
minio = "^7.1.13"
backoff = "^2.2.1"
psycopg-binary = "^3.1.18"
psycopg = "^3.1.18"
redis = "^5.0.4"
pymilvus = "2.4.10"

[tool.poetry.dev-dependencies]
ipython = "^7.31.0"

[tool.poetry.scripts]
dbinit = "nuvolaris.couchdb:init"
actionexecutor = "nuvolaris.actionexecutor:start"
quota_checker = "nuvolaris.quota_checker:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
