[project]
name = "nuvolaris"
version = "2.0.0"
description = "Apache OpenServerless operator"
authors = [
    { name = "Michele Sciabarra", email = "michele@sciabarra.com" },
    { name = "Francesco Timperi Tiberi", email = "francesco@nuvolaris.io" },
    { name = "Bruno Salzano", email = "d4rkstar@gmail.com" },
]
requires-python = ">=3.12, <3.13"
license = "Apache-2.0"
dependencies = [
    "kopf[full-auth]>=1.36.1,<2",
    "PyYAML~=6.0",
    "pykube>=0.15.0,<0.16",
    "Jinja2>=3.0.3,<4",
    "requests>=2.32.4,<3",
    "flatdict>=4.0.1,<5",
    "croniter>=1.3.5,<2",
    "minio>=7.1.13,<8",
    "backoff>=2.2.1,<3",
    "psycopg-binary>=3.1.18,<4",
    "psycopg>=3.1.18,<4",
    "redis>=5.0.4,<6",
    "bcrypt>=4.2.1,<5",
    "python-dotenv>=1.1.1",
]

[project.scripts]
dbinit = "nuvolaris.couchdb:init"
actionexecutor = "nuvolaris.actionexecutor:start"
quota_checker = "nuvolaris.quota_checker:start"

[dependency-groups]
dev = ["ipython>=8.15.0,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
